# vrc-blocker

./: .gitignore  CHANGELOG.md  CLAUDE_HANDOFF.md  GOAL.md  README.md  package.json
.github/workflows/: build.yml  ci.yml
docs/: FRIEND_PROTECTION.md  backend-contract.md  frontend-prototype.md  rate-limit-and-retry.md  report-format.md
examples/: example.csv
public/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: auth.rs  files.rs  imports.rs  mod.rs  run.rs  settings.rs
src-tauri/src/import/: csv_import.rs  mod.rs  validation.rs
src-tauri/src/run_engine/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/vrchat/: auth.rs  client.rs  friends.rs  mod.rs  moderation.rs  notes.rs
