[package]
name = "vrc-blocker"
version = "0.2.0"
description = "A small VRChat block-list importer with online userNotes support"
authors = ["harukishiina"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vrc_blocker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
csv = "1.3"
log = "0.4"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-log = "2.0.0-rc"
tauri = { version = "2.5.0", features = ["macos-private-api"] }
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5"
uuid = { version = "1.8", features = ["serde", "v4"] }
tauri-plugin-dialog = "2.7.1"
